# bricks

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Rocket.toml  build.rs  feed_season_list.json  package-lock.json  package.json  postcss.config.js  styles.css  tailwind.config.js
.github/workflows/: deploy.yml
migrations/: V01__start.sql  V02__clear.sql  V02__game_debug.sql  V1__start.sql
src/: batting.rs  cache.rs  chronicler.rs  csv.rs  db.rs  debug.rs  export.rs  feed.rs  filters.rs  fraction.rs  game.rs  main.rs  names.rs  percentage.rs  pitching.rs  player.rs  render.rs  salmon.rs  schedule.rs  seasons.rs  state.rs  stats.rs  summary.rs  table.rs  team.rs  today.rs
src/game/: errors.rs  mod.rs  routes.rs  state.rs
src/routes/: debug.rs  export.rs  game.rs  mod.rs  player.rs  salmon.rs  season.rs  team.rs
templates/: attribution.html  base.html  dark-mode.js  debug_game.html  error_dashboard.html  failed_game.html  game.html  glossary.html  jump.js  macros.html  player.html  salmon.html  season.html  team.html
