[package]
name = "bricks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
askama = "0.10"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
dotenv = "0.15"
fix-hidden-lifetime-bug = "0.2"
indexmap = { version = "1", features = ["serde"] }
json-patch = "0.2"
lazy_static = "1"
refinery = { version = "0.7", features = ["rusqlite"] }
reqwest = { version = "0.11", features = ["gzip", "json"] }
rusqlite = { version = "0.25", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
uuid = { version = "0.8", features = ["serde"] }
zstd = "0.9"
