[package]
name = "bricks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
askama = "0.10"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
fix-hidden-lifetime-bug = "0.2"
indexmap = { version = "1", features = ["serde"] }
json-patch = "0.2"
lazy_static = "1"
log = "0.4"
refinery = { version = "0.7", features = ["rusqlite"] }
reqwest = { version = "0.11", features = ["gzip", "json"] }
rocket = { version = "0.5.0-rc.1", features = ["uuid"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["sqlite_pool"] }
rusqlite = { version = "0.25", features = ["bundled", "chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
uuid = { version = "0.8", features = ["serde"] }
zstd = "0.9"
