[package]
name = "bricks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
askama = "0.10"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
dotenv = "0.15"
gcd = "2"
indexmap = { version = "1", features = ["serde"] }
itertools = "0.10"
json-patch = "0.2"
lazy_static = "1"
log = "0.4"
minify-html-onepass = { version = "0.7", features = ["js-esbuild"] }
reqwest = { version = "0.11", features = ["gzip", "json"] }
rocket = { version = "0.5.0-rc.1", features = ["uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_urlencoded = "0.7"
sled = { version = "0.34", features = ["compression"] }
twox-hash = "1"
uuid = { version = "0.8", features = ["serde"] }
zerocopy = "0.6"

[dev-dependencies]
float-cmp = "0.9"
proptest = "1"
